# crypto_portfolio_telegram_bot

./: .env  .gitignore  README.md  config_reader.py  keyboards.py  main.py  messages.db  pyproject.toml  requirements.txt
api/: api.py  tg_auth.py
assets/: db.py  texts.py
handlers/: commands.py  test_kek.py  tests.py
handlers/buttons/: another_buttons.py  buy_buttons.py  sell_buttons.py  show_button.py
services/: cmc.py  container.py  quote_cache.py
